# jingziqi

./: .gitignore  README.md  app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: game.rs  main.rs
